--- a/clone-coding/css/main.css
+++ b/clone-coding/css/main.css
@@ -1,62 +1,44 @@
-/* COMMON */
-
 body {
     margin: 0;
     padding: 0;
     height: 3000px;
-}
-
-.material-icons {
-    color: rgb(240, 240, 240);
-    font-size: 19px;
-    cursor: pointer;
-    
-}
-
-/* HEADER */
-
-header {
-    position: fixed;
-    width: 100%;
-    height: 72px;
-    background: #ffffff00;
-    padding-left: 50px;
-    display: flex;
-    align-items: center;
-}
-
-
-.watcha_menu {
-    display: flex;
-    list-style: none;
-    padding-left: 0;
+    background-color: lightblue;
 }
 
 a {
     text-decoration: none;
-    color: rgb(245, 245, 245);
-    display: block;
-    font-size: 14px;
-    margin-left: 23px;
-    font-family: Noto Sans KR;
+    color: #292929;
 }
 
-.watcha_logo {
-    cursor: pointer;
-}
-
-
-.home {
-    font-family: Noto Sans KR;
-    font-weight: 700;
-    padding-left: 24px;
-}
-
-header .material-icons#btn--search {
+/* HEADER */
+.navbar {
+    position: fixed;
+    width: 100%;
+    padding: 4px 4px 0 165px;
     display: flex;
-    padding-left: 850px;
-    width: 3px;
+    align-items: center;
+    background-color: white;
+} 
+
+.mc_menu {
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    padding: 0 100px 0 30px;
 }
 
+.mc_menu li {
+    padding-left: 120px;
+    font-family: Heebo;
+    font-weight: 800;
+    font-size: 20px;
 
+}
 
+.mc_button {
+    padding-right: 40px;
+}
+
+.mc_button.button_1{
+    
+}
