clone-coding edited

--- a/clone-coding/css/main.css
+++ b/clone-coding/css/main.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     height: 3000px;
-    background-color:black;
+    background-color: lightblue;
 
 }
 
@@ -22,6 +22,7 @@ a {
     display: flex;  
     align-items: center;
     padding-left: 50px;
+    z-index: 1;
 }
 
 .menu_left{
@@ -89,7 +90,32 @@ padding-right: 4px;
 
 
 /* 메인 */
-.slide{
+
+
+main {
+    height: 100vh;
+    position: relative;
+}
+
+main .wrapper {
+    justify-content: center;
+    top: calc((40vh - 120px)/2 + 120px);
+}
+
+/* MAIN SLIDER */
+
+main .wrapper #slider {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
+main .wrapper #slider .slide {
+    height: 100%;
+    background-size: 100%
+}
+
+main .wrapper #slider .slide1 {
     width: 100%;
     height: 100vh;
     background: linear-gradient(
@@ -101,57 +127,138 @@ padding-right: 4px;
         background-size: cover;
       }
 
-.slide_title {
-    padding-top: 240px;
-    padding-left: 50px;
-    font-family: noto sans kr;
-    font-weight: 800;
-    font-size: 60px;
-    color: white;
-    letter-spacing: -3px;
+ main .wrapper #slider .slide_title1 {
+        padding-top: 260px;
+        padding-left: 50px;
+        font-family: noto sans kr;
+        font-weight: 800;
+        font-size: 60px;
+        color: white;
+        letter-spacing: -3px;
+    }
+
+ main .wrapper #slider .slide_title_down1 {
+        padding-top: 25px;
+        padding-left: 50px;
+        font-family: noto sans kr;
+        font-size: 20px;
+        color: white;
+    }
+    
+input.button_1{
+        background-image: url(/images/list.png);
+        background-repeat: no-repeat;
+        background-position: 13px;
+        background-size: 22px;
+        background-color: #ffffff0c;
+        padding: 10px 15px 15px 15px;
+        border: none;
+        cursor: pointer;
+        height: 50px;
+        width: 135px;
+        margin-left: 50px;
+        margin-top: 45px;
+        font-family: noto sans kr;
+        font-size: 19px;
+        text-align: right;
+        color: white;
+    }
+    
+input.button_1:hover{
+        background-image: url(/images/list_black.png);
+        background-repeat: no-repeat;
+        background-position: 13px;
+        background-size: 22px;
+        background-color: white;
+        padding: 10px 15px 15px 15px;
+        height: 50px;
+        width: 135px;
+        margin-left: 50px;
+        margin-top: 45px;
+        font-family: noto sans kr;
+        font-size: 19px;
+        text-align: right;
+        color: black;
+    
+    }
+
+
+main .wrapper #slider .slide2 {
+    background-image: url(../images/slides/slide02.jpeg);
 }
 
-.slide_title_down {
-    padding-top: 25px;
-    padding-left: 50px;
-    font-family: noto sans kr;
-    font-size: 20px;
-    color: white;
+main .wrapper #slider .slide3 {
+    background-image: url(../images/slides/slide03.jpeg);
 }
 
-input.button_list{
-    background-image: url(/images/list.png);
-    background-repeat: no-repeat;
-    background-position: 13px;
-    background-size: 22px;
-    background-color: #ffffff0c;
-    padding: 10px 15px 15px 15px;
-    border: none;
+main .wrapper #slider .slide4 {
+    background-image: url(../images/slides/slide04.jpeg);
+}
+
+main .wrapper #slider .slide5 {
+    background-image: url(../images/slides/slide05.jpeg);
+    
+}
+
+main .wrapper #slider .slide6 {
+    background-image: url(../images/slides/slide06.jpeg);
+}
+
+main .wrapper #slider .slide__content {
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+main .wrapper #slider .slide__content span {
+    font-size: 80px;
+    color: #F6F5F0;
+}
+
+/* SLIDER ARROW */
+
+main .wrapper #slider .material-icons {
+    justify-content: center;
+    position: absolute;
+    top: 45%;
+    margin-top: 30px;
+}
+
+main .wrapper #slider .arrow--left {
+    left: 20px;
+   
+}
+
+main .wrapper #slider .arrow--right {
+    right: 20px;
+}
+
+/* SLIDER DOTS */
+
+main .wrapper #slider .dots {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 150px auto;
+    padding-right: 70px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+main .wrapper #slider .dots .dot {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background: #ffffff62;
+    margin: 0 6px;
     cursor: pointer;
-    height: 50px;
-    width: 135px;
-    margin-left: 50px;
-    margin-top: 45px;
-    font-family: noto sans kr;
-    font-size: 19px;
-    text-align: right;
-    color: white;
+    
 }
 
-input.button_list:hover{
-    background-image: url(/images/list_black.png);
-    background-repeat: no-repeat;
-    background-position: 13px;
-    background-size: 22px;
-    background-color: white;
-    padding: 10px 15px 15px 15px;
-    height: 50px;
-    width: 135px;
-    margin-left: 50px;
-    margin-top: 45px;
-    font-family: noto sans kr;
-    font-size: 19px;
-    text-align: right;
-    color: black;
-
+main .wrapper #slider .dots .dot1 {
+    background: #ffffff;
 }
