--- a/clone-coding/css/main.css
+++ b/clone-coding/css/main.css
@@ -1,15 +1,9 @@
 body {
     margin: 0;
     padding: 0;
-    height: 3000px;
-    background-color: lightblue;
+    height: 1500px;
+    background-color: rgb(0, 0, 0);
 
-}
-
-
-a {
-    text-decoration: none;
-    color:#eeeeee;
 }
 
 
@@ -23,14 +17,20 @@ a {
     align-items: center;
     padding-left: 50px;
     z-index: 1;
+    font-family: noto sans kr;
+    font-size: 14px;
+    color:#eeeeee;
 }
+
 
 .menu_left{
     display: flex;
     align-items: center;
     list-style-type: none;
     padding-left: 36px;
-    padding-right: 825px;
+    padding-right: 820px;
+    cursor: pointer;
+    flex-shrink: 0;
     
 }
 
@@ -39,25 +39,26 @@ a {
     display: flex;
     align-items: center;
     list-style-type: none;
-    color:#eeeeee;
     cursor: pointer;
+    flex-shrink: 0;
     
 }
 
-.navbar li{
-    font-family: noto sans kr;
-    font-size: 14px;
-    flex-shrink: 0;
-}
 
 .menu_left li {
-    padding: 0 12px;
+    padding: 0 14px;
 }
 
+.menu_right li {
+    padding: 0 3px;
+}
 
-.home {
+a {
     font-weight: bold;
+    text-decoration: none;
+    color:#eeeeee;
 }
+
 
 .search_box{
     display: flex;
@@ -67,7 +68,7 @@ a {
 .search_button {
     position: relative;
     padding-top: 4px;
-    padding-right: 9px;
+    padding-right: 5px;
 }
 
 .profile_box {
@@ -110,9 +111,6 @@ main .wrapper #slider {
     width: 100%;
     height: 100vh;
     position: relative;
-}
-
-main .wrapper #slider .slide {
     overflow: hidden;
 }
 
@@ -240,6 +238,7 @@ main .wrapper #slider .material-icons {
 main .wrapper #slider .arrow--left {
     left: 0;
     padding: 100px 15px;
+    opacity: 0.5;
    
    
 }
@@ -247,6 +246,15 @@ main .wrapper #slider .arrow--left {
 main .wrapper #slider .arrow--right {
     right: 0px;
     padding: 100px 15px;
+    opacity: 0.5;
+}
+
+main .wrapper #slider .arrow--left:hover {
+    opacity: 1;
+}
+
+main .wrapper #slider .arrow--right:hover {
+    opacity: 1;
 }
 /* SLIDER DOTS */
 
@@ -274,3 +282,204 @@ main .wrapper #slider .dots .dot {
 main .wrapper #slider .dots .dot1 {
     background: #ffffff;
 }
+
+/* section */
+
+.container_title {
+    position: relative;
+    bottom: 120px;
+    height: 50px;
+    padding-left: 43px;
+    background: rgba(255, 255, 255, 0);
+    font-family: noto sans kr;
+    font-size: 23px;
+    font-weight: bold;
+    color: white;
+}
+
+.watching_all {
+    position: relative;
+    bottom: 165px;
+    padding-left: 1390px;
+    font-family: noto sans kr;
+    font-weight: bold;
+    font-size: 16px;
+    color: #ffffff;
+    opacity: 0.7;
+    cursor: pointer;
+}
+
+.watching_all:hover {
+    color: white;
+    opacity: 1;
+}
+
+.gradation {
+    position: relative;
+    bottom: 165px;
+    background: linear-gradient(to top, #00000000, #000000 40%, transparent);
+    height: 200px;
+}
+
+
+.box {
+    position: relative;
+    bottom: 350px;
+    padding-left: 40px;
+    display: grid;
+    grid-column-gap: 40px;
+    grid-template-columns: repeat(6, minmax(100px, 1fr));
+    }
+  
+  .box a {
+    transition: transform .3s; 
+  }
+  
+  .box a:hover {
+    transition: transform .3s;
+    -ms-transform: scale(1.4);
+    -webkit-transform: scale(1.4);  
+    transform: scale(1.4);
+  }
+  
+  .title_text {
+    position: absolute;
+    display: flex;
+    color: white;
+    font-family: noto sans kr;
+    font-size: 15px;
+    padding-left: 40px;
+}
+
+.title_text>div {
+position: relative;
+top: 150px;
+padding-right: 196px;
+flex-shrink: 0;
+}
+
+.container_title_next {
+    position: relative;
+    bottom: 320px;
+    height: 50px;
+    padding-left: 43px;
+    padding-top: 50px;
+    font-family: noto sans kr;
+    font-size: 23px;
+    font-weight: bold;
+    color: white;
+}
+
+.watching_all_next {
+    position: relative;
+    bottom: 365px;
+    padding-left: 1390px;
+    font-family: noto sans kr;
+    font-weight: bold;
+    font-size: 16px;
+    color: #ffffff;
+    opacity: 0.7;
+    cursor: pointer;
+}
+
+.watching_all_next:hover {
+    color: white;
+    opacity: 1;
+}
+.title_text_next{
+    position: absolute;
+    display: flex;
+    color: white;
+    font-family: noto sans kr;
+    font-size: 15px;
+    padding-left: 40px;
+}
+
+.title_text_next>div {
+    position: relative;
+    display: inline-block;
+    top: 150px;
+    flex-shrink: 0;
+    }
+
+.movie_title_1 {
+    padding-left: 210px;
+}
+
+.movie_title_2 {
+    padding-left: 135px;
+}
+
+.movie_title_3 {
+    padding-left: 167px;
+}
+
+.movie_title_4 {
+    padding-left: 190px;
+}
+
+.movie_title_5 {
+    padding-left: 230px;
+}
+
+.movie_title_6 {
+    padding-left: 215px;
+}
+
+.movie_title_7 {
+    padding-left: 145px;
+}
+
+.movie_title_8 {
+    padding-left: 167px;
+}
+
+.movie_title_9 {
+    padding-left: 167px;
+}
+
+.movie_title_10 {
+    padding-left: 190px;
+}
+
+.movie_title_11 {
+    padding-left: 220px;
+}
+
+.movie_title_12 {
+    padding-left: 170px;
+}
+
+.movie_title_13 {
+    padding-left: 120px;
+}
+
+.movie_title_14 {
+    padding-left: 185px;
+}
+
+
+.movie_title_15 {
+    padding-left: 200px;
+}
+
+.movie_title_16 {
+    padding-left: 230px;
+}
+
+.movie_title_17 {
+    padding-left: 140px;
+}
+
+.movie_title_18 {
+    padding-left: 185px;
+}
+
+.movie_title_19 {
+    padding-left: 215px;
+}
+
+.movie_title_20 {
+    padding-left: 170px;
+}
+
